@@ -1,6 +1,6 @@
 Current Version: @@VERSION@@
 
-ctags-5.5 (Sun Mar 30 2003)
+ctags-5.5 (Tue Apr 1 2003)
 * Changed kind indicator for methods from 'f' to 'm' [Tcl].
 * Changed tags within interfaces to be disabled by default (like prototypes in
   C/C++) [Fortran].
@@ -35,6 +35,7 @@ ctags-5.5 (Sun Mar 30 2003)
 * Fixed missing tags for nested subprograms using 'contains' [Fortran, Bug #670433].
 * Fixed missing tags when variable has same name as keyword [Fortran].
 * Fixed spurious tag when an array-spec occurs within an entity-decl [Fortran].
+* Fixed mishandling of multiline raw strings [Python, Bug #699171].
 * Fixed missing scope extension field on namespaces [C++, C#, Bug #665086].
 * Fixed several bugs causing missed tags [Fortran].
 * Fixed problem with --langmap option preventing clearing of map [Bug #688442].
